--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^7.3.7",
     "@mui/material": "^7.3.7",
     "@tailwindcss/vite": "^4.1.18",
+    "firebase": "^12.9.0",
     "lucide": "^0.562.0",
     "lucide-react": "^0.562.0",
     "motion": "^12.33.0",
